fix QSL alignments

--- a/css/qsl.css
+++ b/css/qsl.css
@@ -100,7 +100,7 @@ main {
 
 .header-logo {
 	max-height: 65px;
-	width: auto;
+	max-width: 100%;
 	height: auto;
 	border-radius: 12px;
 	margin-top: 8px;
